<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_forecast"
            android:icon="@drawable/img_6"
            android:title="@string/forecast" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_delay"
            android:icon="@drawable/delay_transparent"
            android:title="@string/delay" />
        <item
            android:id="@+id/nav_resource"
            android:icon="@drawable/resource_transparent"
            android:title="@string/resource" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout" />
    </group>
</menu>